hphp/hack/test/typecheck/null/option_null.php.exp
File "option_null.php", line 4, characters 18-22:
?null is a redundant typehint - just use null (Typing[4295])
