hphp/hack/test/typecheck/null/option_null.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function test(): ?null {
  return null;
}
